# mips

./: .gitignore  CMakeLists.txt  README.md  cam.cpp  counter.cpp  instruction_cache.cpp  main.cpp  main.sv  ring_buffer.cpp  run
design/: INSTRUCTION_CACHE.md
include/: verilated.mk  verilated_config.h
rtl/: alu.sv  cam.sv  cam_tb.sv  counter.sv  counter_tb.sv  defs.sv  instruction_cache.sv  instruction_cache_tb.sv  main.sv  progmem.sv  registers.sv  ring_buffer.sv  ring_buffer_tb.sv
